use jvm args from test profile